--- a/src/scss/_structure.scss
+++ b/src/scss/_structure.scss
@@ -181,6 +181,7 @@ section {
       display: flex;
       justify-content: space-between;
       list-style: none;
+      gap: 2rem;
     }
   }
   & .service {
